--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <script src="lib/mylib.js"></script>
+
+    <button onclick="myfunction()">Text</button>
   </body>
 </html>
